PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules) 
MESSAGE(${CMAKE_MODULE_PATH})
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(main ${DIR_SRCS})
FIND_PACKAGE( libmath REQUIRED)
MARK_AS_ADVANCED(
	LIBMATH_INCLUDE_DIR
	LIBMATH_LIBRARIES
)
IF (LIBMATH_INCLUDE_DIR AND LIBMATH_LIBRARIES)
MESSAGE(STATUS "Found libdb libraries")
INCLUDE_DIRECTORIES(${LIBMATH_INCLUDE_DIR})
MESSAGE( ${LIBMATH_LIBRARIES} )
TARGET_LINK_LIBRARIES(main ${LIBMATH_LIBRARIES} )
ENDIF (LIBMATH_INCLUDE_DIR AND LIBMATH_LIBRARIES)
