PROJECT(main)

FILE(GLOB SRC_LIST_CPP "${PROJECT_SOURCE_DIR}/math/*.cpp")
FILE(GLOB SRC_LIST_C "${PROJECT_SOURCE_DIR}/math/*.c")

MESSAGE(STATUS "src_list:" ${SRC_LIST_CPP} ${SRC_LIST_C})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#指定生成动态库
ADD_LIBRARY(math SHARED ${SRC_LIST_CPP} ${SRC_LIST_C})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
include_directories(math)
add_subdirectory(math)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(main ${DIR_SRCS})
TARGET_LINK_LIBRARIES( main MATH)
